[package]
name = "crystal_nova"
version = "0.1.0"
edition = "2021"
authors = ["Alyx Satchell alyxsatchell@gmail.com"]

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.16", features = [ "derive" ] }
cgmath = "0.18"
env_logger = "0.10"
log = "0.4"
wgpu = "22.0"
winit = { version = "0.29", features = ["rwh_05"] }
